more styling for table, media friendly, mortgage summary, fixed table overflow

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,8 @@ button {
 }
 
 button {
-  margin-top: 3.3rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
   height: 100px;
   background-color: #961096;
   color: #f0f0f0;
@@ -79,7 +80,7 @@ button:hover {
 /*------------------Results section------------------*/
 .results-side {
   width: 100%;
-  height: 100%;
+  height: auto;
   background-color: #ffff61;
   padding: 1.5em;
 }
@@ -108,9 +109,10 @@ button:hover {
 .amortization-table {
   border-collapse: collapse;
   width: 100%;
-  margin-top: -0.4rem;
+  margin-top: 1rem;
   margin-right: 17.4rem;
   display: none;
+  font-size: 1.1rem;
 }
 
 .amortization-table th,
@@ -124,23 +126,33 @@ button:hover {
   background-color: #b1b12c;
 }
 
-/* Add more styles as needed */
+.summary {
+  font-size: 1.1rem;
+}
+
+/* Media 1 */
+@media only screen and (min-width: 670px) and (max-width: 1199px) {
+  .input-side {
+    height: auto;
+  }
+}
 
 /* Desktop media */
 @media only screen and (min-width: 1200px) {
   .container {
     display: flex;
     flex-direction: row;
-    height: 100%;
+    min-height: 100vh;
   }
 
   .input-side {
     width: 60%;
-    height: 100%;
+    height: auto;
   }
 
   .results-side {
-    width: 40%;
+    flex: 1;
+    overflow-y: auto;
   }
 
   .headline {
@@ -181,6 +193,9 @@ button:hover {
   }
 
   .amortization-table {
-    margin-right: 9rem;
+    margin-top: 1rem;
+    margin-right: 17.4rem;
+    display: none;
+    font-size: 1.1rem;
   }
 }
